# spacetraders-bot

./: .dockerignore  .gitignore  Cargo.toml  SpaceTraders.yaml  config.json  config.toml  database.sql  docker-compose-prod.yml  docker-compose.yml  dockerfile  index.html  log.txt#  readme.md  schema.graphql
.cargo/: config.toml
.sqlx/: query-00a8fbdc54328953820266cca4f8cffd2b115cfb9d6897ae218bc2decdf254ac.json  query-00c9015b39549aef44a025f9ac269da62780fdafcd29946fd71b84ad30500b17.json  query-01650eae2c94d43f6cb7647d1f97c2aa233b3a570232e0b28008b0f89f4185e4.json  query-01ae47a279234bf6f7d2d5410803efe33279fd5ce583aa831b90257517dfcda9.json  query-024de931bafe76d48f3c6b65abd019908a0692a8fdf82ab35bc71b5c2531b3d2.json  query-02599d6403261b53f730a7016ef1aaa9065c04c39d40573e97f1505ffbb8c0ef.json  query-031a8f3fbd94be76c62106c64a297669e59b18225dd4b38b41eae22ce8410d86.json  query-03205cb8204ca40cecf3bdf1be533e26628bf074912773338700cb7c15392180.json  query-034ef32f7d937672538aeba263fa8ce14e4a0783cc07e120be037d4b296d7c78.json  query-0362fe9a88fe5dceec5e83255ea9929f7bd7ee2f8dc3485ac0450e4ba406d395.json  query-03695fd6cec01cca0fea0d9922fb6c102b340b4f6c868f080e236fc5423b022a.json  (+389 more)
adminUI/: apollo.config.json  (+5 more)
database/: Cargo.toml
database/.sqlx/: query-009b5450c919a1d97185f605cbd64b1dc1642610a7e4d843b6d299c47f73ce0a.json  query-00f80d8ba009ea4727b194526568e8247928321b74fdb0f453af629ed1085835.json  query-014f4dc90e025dbcebca9354c8d9651634bcad5fdd76d95ad16cb816c02d38a6.json  query-0178ce83cdd016faf1d0342eed7fddf8383951e7bd5b749ee3f9a1aadc10a23d.json  query-01a04043b1b0ee60cd1937d4448a975b5e6e2e3a9787f503a3765450dae5c070.json  query-01a1bf0abde263cc2b27ebc7a19ab03e17139266f862d9cf2904c5f153cb9afd.json  query-02ca7a8d419f8fe69775c4fd500b7ad16e247a80fc34b633842ac20ae84701ae.json  query-03379b8622c7fd912593fd5bea950ef6d00a55228d315e48c95cca913aa1942e.json  query-035c8b58f2c9516918aab3b4175e8c21677aa43454c966dd2186a6cf1bb6f2ab.json  query-046f9d8507f2424f91f96c6a00c9594b6e72cdcd849bec227e322ce34ff9f137.json  query-04a3a4b64e04184392035eef053ec95f4e56bb97447b9e3e3687c4cd17f22568.json  query-04ca36a2b51f8aed9e9829c840f360dc52906c35c6bd7f90105c23c2bad99559.json  query-05619aa105a42d7ce39e0a16d7b862deb3f799fa996e037d54cb58e63cb9f9d7.json  query-05a8b3a520ced400988b612b9df5438e685fd4ea1b9adfbc130c63854b396d3f.json  query-05ab26efc9e2fc9a78dbd96faa902824ba3b2d2d6221e1556882406b4b124d2f.json  query-05ae6d916c842a1dc13b0439d6c2b7aa60820efa9ec8057abab64ab563071c63.json  query-06151c1f7345e598642cd4a23bcef89e579314d9ce1566aeafc71ee757765ee5.json  query-06163f890b2e1fe0c3a5b538ed3b59a6ea3c40c0d6807a0331f54a1c8120cd6b.json  query-071616648d0bfe6025a9e8ff0061553989a8d2569f5585d027c139e064ed1dda.json  query-0767854887bc487339c362fddc4d8b0eb217beb14c7178008635ef48f9f70f71.json  query-082840db9c07d86bdb91cf57e6ba05a9ca546beba1b086e1728ba0bba1685a0b.json  query-09926e733402472959393b4803fcdda911bbb679e8c5d2da3efb15ce3c131612.json  query-09c53fba14482e61d842f5be515ed74ad07dcbbf53b3494051b765b47ede9b9a.json  query-0a98cff8c527fa41da8d3b2e72b5f2a842b9c245f80b86aa35ab43d1d180c958.json  query-0acf3b6875b997b9289c7618117e06fde4dbb11a7e5955c305de7d7bfaa33708.json  query-0c3af3e27cd53ce4c8faf667e521225a88d327ed118a369e178b474c2794f173.json  query-0cdb1de3c1d5da26cc6711de565512fee851fff15b9b5038eb24454aba507d30.json  query-0cf0c29a589bea4231b8bc7ccf157b331a15e36133107254f0072d50a7de5dae.json  query-0d64ff000a3981a002bdfac23bf80af586191c00ff25c3727fa0c6f1332bcd9f.json  query-0d7f7a4339a06e7e667c555db4617787231f1d7bb58e37819277e90cd248b064.json  query-0dba013657c3045d7ad7b8af3a8093aade3ef10c83bedf37aac499daa0f6e010.json  query-0ddb4e3124c7256eee5f202c329546fe577aa0241b3224d28f02dbfbff8f3cda.json  query-0ea1dd1fe4c14d47ef4851aca4a94c134962250b8c32cb1615560464ddb4eb70.json  query-0eb540a1956a62e92ec4027d8678be8c431bdbca429e68f75f26ccbaeb72644a.json  query-0ee04b9aaa885ec378e88d382f6d78eef1b43a7a11ca082e0a5e1fbc64f2420d.json  query-10079509ee7c760cf861e8b5b0061f0042eb17b7cbe9f50084c5305dde34313f.json  query-109a7599772c7b2d16a07c90092bf6e4df5d72e9ed6e2e6c340aaa120594023a.json  query-10fefcfe72eba83b720879bb81670cd26fb909acc61b0bbaf7c544535a96b608.json  query-13050cc66a6b2f35437141b1d1cccf37a38732e6b15de2d7de88f11055a95028.json  query-1393bbe3e2c1fff49bd9a733baf7620aeb0e413c10ac1f614378263ee7251699.json  (+567 more)
database/src/: agent.rs  chart_transaction.rs  configuration.rs  construction_material.rs  construction_shipment.rs  contract.rs  contract_delivery.rs  contract_shipment.rs  engine_info.rs  export_import.rs  extraction.rs  fleet.rs  frame_info.rs  jump_gate_connection.rs  lib.rs  market_trade.rs  market_trade_good.rs  market_transaction.rs  module_info.rs  mount_info.rs  reactor_info.rs  repair_transaction.rs  reserved_fund.rs  route.rs  scrap_transaction.rs  ship_assignment.rs  ship_event.rs  ship_info.rs  ship_jump.rs  ship_modification_transaction.rs  ship_state.rs  ship_transfer.rs  shipyard.rs  shipyard_ship.rs  shipyard_ship_types.rs  shipyard_transaction.rs  survey.rs  system.rs  trade_route.rs  waypoint.rs
ship/: Cargo.toml
ship/src/: cargo.rs  error.rs  events.rs  fuel.rs  lib.rs  mining.rs  modules.rs  mounts.rs  my_ship_update.rs  nav.rs  ship_manager.rs  ship_models.rs  status.rs  utils.rs
ship/src/autopilot/: connection.rs  instructor.rs  jump_gate_nav.rs  mod.rs  nav_mode.rs  navigator.rs  pathfinder.rs  simple_pathfinding.rs  stats.rs  utils.rs
(+688 files in other folders)
