[package]
name = "spacetraders"
version = "0.1.0"
edition = "2021"

[dependencies]
space_traders_client = { path = "./space_traders_client" }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
tokio = { version = "1.32.0", features = ["full"] }
dotenvy = "0.15.7"
serde = "1.0.201"
serde_json = "1.0.132"
anyhow = "1.0.90"
env_logger = "0.11.5"
chrono = "0.4.38"
log = "0.4.22"
async-recursion = "1.1.1"
thiserror = "1.0.64"
governor = "0.7"
dashmap = "6.1"
# tokio + native-tls
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }