[package]
name = "spacetraders"
version = "0.1.0"
edition = "2021"

[dependencies]
space_traders_client = { path = "./space_traders_client" }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
tokio = { version = "^1.41", features = ["full"] }
dotenvy = "0.15.7"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "^1.0"
env_logger = "0.11.5"
chrono = {version="0.4.38",features = ["serde"] }
log = "0.4.22"
async-recursion = "1.1.1"
governor = "0.7"
dashmap = {version="6.1",features=["raw-api"]}
# tokio + native-tls
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono", "time" ] }
priority-queue = "2.1.1"
rand = "0.8.5"
lazy_static = "1.5.0"
tokio-util = "^0.7"
warp = "0.3.7"
futures = "0.3.31"
tokio-stream = {version="0.1.16", features=["sync"]}
serde_with = {version="3.11.0",features=["chrono_0_4"]}
rsntp = {version="4.0.0",features=["tokio"]}
lockable = "0.1.1"
moka = { version = "0.12.8", features = ["future"] }
