[package]
name = "spacetraders"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["database", "ship", "space_traders_client", "utils"]

[dependencies]
space_traders_client = { path = "./space_traders_client" }
utils = { path = "./utils" }
database = { path = "./database" }
ship = { path = "./ship" }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
tokio = { version = "^1.47", features = ["full", "rt-multi-thread"] }
dotenvy = "0.15.7"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "^1.0"
env_logger = "0.11.5"
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4.22"
async-recursion = "1.1.1"
governor = "0.7"
dashmap = { version = "6.1", features = ["raw-api"] }
# tokio + native-tls
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "chrono",
] }
priority-queue = "2.1.1"
rand = "0.8.5"
lazy_static = "1.5.0"
tokio-util = "^0.7"
warp = "0.3.7"
futures = "0.3.31"
tokio-stream = { version = "0.1.16", features = ["sync"] }
serde_with = { version = "3.11.0", features = ["chrono_0_4"] }
rsntp = { version = "4.0.0", features = ["tokio"] }
lockable = "0.1.1"
moka = { version = "0.12.8", features = ["future"] }
thiserror = "2.0.6"
reqwest-middleware = { version = "0.4.1", features = ["json", "multipart"] }
itertools = "0.14.0"
toml_edit = { version = "0.23.5", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
# console-subscriber = "0.4.1"

tracing-opentelemetry = "0.19.0"
opentelemetry = { version = "0.19.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.12.0", features = ["tonic", "metrics"] }
opentelemetry-semantic-conventions = { version = "0.11.0" }

tracing-tracy = "0.11.4"
async-graphql = "7.0.17"
async-graphql-warp = "7.0.17"
