[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
space_traders_client = { path = "../space_traders_client" }
tokio = { version = "^1.41", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "chrono",
] }
chrono = { version = "0.4.38", features = ["serde"] }
itertools = "0.14.0"
thiserror = "2.0.6"
